# cargo-check-delta

./: Cargo.toml  README.md  dist-workspace.toml
src/: db.rs  main.rs
