[package]
name = "cargo-check-delta"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/nazo6/cargo-check-delta"

[dependencies]
cargo_metadata = "0.19.1"
clap = { version = "4.5.30", features = ["derive"] }
ignore = "0.4.23"
serde = "1.0.217"
serde_json = "1.0.138"
camino = { version = "1.1.9", features = ["serde1"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
